--- a/Group_Project/Group_Project.csproj
+++ b/Group_Project/Group_Project.csproj
@@ -143,20 +143,20 @@
     <Content Include="Images\background_3.jpg" />
     <Content Include="Images\background_4.png" />
     <Content Include="Images\background_5.jpg" />
-    <Content Include="Images\bedrock 750x750.png" />
-    <Content Include="Images\coal_750_750.jpeg" />
-    <Content Include="Images\copper_750x750.jpg" />
-    <Content Include="Images\diamond_750x750.png" />
-    <Content Include="Images\dirt_750x750.jpeg" />
-    <Content Include="Images\emerald_750_750.jpg" />
-    <Content Include="Images\gold_750x750.jpg" />
-    <Content Include="Images\iron_750x750.jpeg" />
+    <Content Include="Images\bedrock.png" />
+    <Content Include="Images\coal.jpg" />
+    <Content Include="Images\copper.jpg" />
+    <Content Include="Images\diamond.png" />
+    <Content Include="Images\dirt.jpg" />
+    <Content Include="Images\emerald.jpg" />
+    <Content Include="Images\gold.jpg" />
+    <Content Include="Images\iron.jpg" />
     <Content Include="Images\LOGO.png" />
-    <Content Include="Images\obsidian_750x750.jpg" />
+    <Content Include="Images\obsidian.jpg" />
     <Content Include="Images\output-onlinepngtools.png" />
     <Content Include="Images\portrait wallpaper.jpeg" />
-    <Content Include="Images\sand_750x750.jpeg" />
-    <Content Include="Images\stone_750x750.jpeg" />
+    <Content Include="Images\sand.jpg" />
+    <Content Include="Images\stone.jpg" />
     <Content Include="Images\welcome background.jpg" />
     <None Include="Music\fellowship.wav" />
   </ItemGroup>
