--- a/Group_Project/Group_Project.csproj
+++ b/Group_Project/Group_Project.csproj
@@ -83,6 +83,12 @@
     <Compile Include="HighScoreForm.Designer.cs">
       <DependentUpon>HighScoreForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="InstructionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InstructionsForm.Designer.cs">
+      <DependentUpon>InstructionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainGameForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HighScoreForm.resx">
       <DependentUpon>HighScoreForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InstructionsForm.resx">
+      <DependentUpon>InstructionsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainGameForm.resx">
       <DependentUpon>MainGameForm.cs</DependentUpon>
@@ -158,6 +167,7 @@
     <Content Include="Images\sand.jpg" />
     <Content Include="Images\stone.jpg" />
     <Content Include="Images\welcome background.jpg" />
+    <None Include="Instructions.txt" />
     <None Include="Music\fellowship.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
