--- a/Group_Project/Group_Project.csproj
+++ b/Group_Project/Group_Project.csproj
@@ -167,6 +167,7 @@
     <Content Include="Images\sand.jpg" />
     <Content Include="Images\stone.jpg" />
     <Content Include="Images\welcome background.jpg" />
+    <None Include="Resources\Cat.txt" />
     <None Include="Instructions.txt" />
     <None Include="Music\fellowship.wav" />
   </ItemGroup>
