--- a/Group_Project/Group_Project.csproj
+++ b/Group_Project/Group_Project.csproj
@@ -167,7 +167,9 @@
     <Content Include="Images\sand.jpg" />
     <Content Include="Images\stone.jpg" />
     <Content Include="Images\welcome background.jpg" />
-    <None Include="Resources\Cat.txt" />
+    <None Include="Resources\Cat.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Instructions.txt" />
     <None Include="Music\fellowship.wav" />
   </ItemGroup>
