--- a/Group_Project/Group_Project.csproj
+++ b/Group_Project/Group_Project.csproj
@@ -168,9 +168,9 @@
     <Content Include="Images\sand.jpg" />
     <Content Include="Images\stone.jpg" />
     <Content Include="Images\welcome background.jpg" />
-    <Content Include="Resources\Records.txt">
+    <None Include="Resources\Records.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
     <None Include="Resources\Cat.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
